--- a/drug1.html
+++ b/drug1.html
@@ -134,7 +134,7 @@ h1 {
         // Create the pie chart using Highcharts
         Highcharts.chart('chartContainer', {
           chart: {
-            type: 'pie' // Set the chart type to 'pie'
+            type: 'pie' 
           },
           title: {
             text: 'Drug interactions with Rizatriptan'
